--- a/src/counter.css
+++ b/src/counter.css
@@ -26,7 +26,8 @@ body {
   margin-top: 5rem;
 }
 
-.increment {
+.increment,
+.decrement {
   padding: 10px 20px;
   border-radius: 100px;
   font-size: 2rem;
