--- a/src/Meal API project/meal.css
+++ b/src/Meal API project/meal.css
@@ -41,3 +41,8 @@ img {
   height: 200px;
   width: 300px;
 }
+h1 {
+  font-family: Helvetica, sans-serif;
+  display: flex;
+  justify-content: center;
+}
