--- a/src/Testimonials/testimonial.css
+++ b/src/Testimonials/testimonial.css
@@ -8,6 +8,8 @@ body {
   background-color: #e5fffc;
   width: max-content;
   padding: 3em;
+}
+.testimonial-2 {
   display: grid;
   place-items: center;
 }
@@ -18,17 +20,17 @@ body {
   font-style: italic;
 }
 .testimonials-nav {
-  display: grid;
-  grid-template-columns: repeat(2, 1fr);
+  display: flex;
   justify-content: space-between;
   margin-top: 20px;
-  gap: 17em;
 }
 button {
   background: transparent;
-  padding: 0.4em;
+  padding: 0.4em 0.8em;
   border: 1px solid #000000;
   cursor: pointer;
+  border-radius: 0.2em;
+  transition: 0.2s ease;
 }
 button:hover {
   background-color: #00d1b9;
