--- a/src/Form validation/form.css
+++ b/src/Form validation/form.css
@@ -3,22 +3,47 @@
   padding: 0;
   box-sizing: border-box;
 }
+:root {
+  --primary-color: #6eb6f6;
+}
 body {
   height: 100vh;
-  background-image: linear-gradient(to right, aliceblue, rgb(110, 182, 246));
+  background-image: linear-gradient(to right, aliceblue, var(--primary-color));
+  background-repeat: no-repeat;
   display: flex;
   justify-content: center;
   align-items: center;
 }
 .card {
-  width: 100%;
-  display: grid;
-  grid-template-columns: repeat(1, 1fr);
-  place-items: center;
+  width: 60em;
+  display: flex;
+  justify-content: center;
 }
 input {
   outline: none;
-  border: 2px solid;
+  border: none;
+  border-bottom: 1.5px solid #a0a0a0;
+  margin-bottom: 10px;
+  padding: 0.5em;
 }
-.card-image {
+form {
+  background-color: #ffffff;
+  padding: 2rem;
+  width: 40%;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+}
+.error {
+  font-size: 0.5em;
+  text-align: center;
+  color: #ff0000;
+}
+button {
+  margin-top: 10px;
+  padding: 0.5em 0.7em;
+  background-color: var(--primary-color);
+  border: none;
+  color: #ffffff;
+  font-weight: bold;
 }
