--- a/src/porfolio shi/header.css
+++ b/src/porfolio shi/header.css
@@ -1,14 +1,3 @@
-@import url('https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
-:root {
-  --primary-color: #ffd700;
-  --secondary-color: #002647;
-}
-html {
-  min-height: 100em;
-  background: linear-gradient(to right bottom, #0580ec, var(--secondary-color));
-}
-body {
-}
 * {
   margin: 0;
   box-sizing: border-box;
@@ -17,6 +6,7 @@ body {
 }
 header {
   position: fixed;
+  top: 0;
   display: flex;
   width: 100%;
   justify-content: space-between;
