--- a/src/porfolio shi/home.css
+++ b/src/porfolio shi/home.css
@@ -47,7 +47,7 @@ main {
   border-radius: 1.2em;
   font-size: 0.7em;
 }
-svg {
+.homepage svg {
   font-size: 1.2em;
   transition: 0.5s ease;
 }
@@ -57,9 +57,9 @@ svg {
   justify-content: space-around;
   width: 30%;
 }
-svg:hover {
+.homepage svg:hover {
   color: var(--third-color);
-  transform: scale(1.5);
+  transform: scale(1.5) rotate(-10deg);
 }
 .link {
   display: flex;
