--- a/src/porfolio shi/about.css
+++ b/src/porfolio shi/about.css
@@ -19,7 +19,9 @@
   justify-content: space-between;
 }
 .whole-accordion {
-  width: 50%;
+  background-color: #001e38;
+  color: white;
+  padding: 1em;
 }
 .head p {
   width: 70%;
