--- a/src/porfolio shi/about.css
+++ b/src/porfolio shi/about.css
@@ -3,6 +3,7 @@
   display: flex;
   flex-direction: column;
   align-items: center;
+  scroll-margin-top: 5em;
 }
 .section-head {
   display: flex;
