--- a/src/porfolio shi/hamburger.css
+++ b/src/porfolio shi/hamburger.css
@@ -48,7 +48,8 @@
   position: absolute;
   background-color: var(--secondary-color);
   top: 2.3em;
-  right: -1em;
+  left: -15em;
+  right: 0;
   min-width: 20em;
   min-height: 100vh;
   padding: 1em;
@@ -68,7 +69,7 @@
   color: inherit;
   text-decoration: none;
 }
-@media only screen and (max-width: 700px) {
+@media only screen and (max-width: 760px) {
   .hamburger-container {
     display: inline-block;
   }
