--- a/src/porfolio shi/header.css
+++ b/src/porfolio shi/header.css
@@ -14,6 +14,7 @@ header {
   align-items: center;
   background-color: var(--secondary-color);
   color: white;
+  padding-right: 2em;
 }
 ul {
   list-style: none;
@@ -31,6 +32,7 @@ ul li a:hover {
 }
 nav {
   width: 50%;
+  display: block;
 }
 .lightName,
 .darkName {
@@ -47,6 +49,10 @@ nav {
   color: var(--secondary-color);
   background-color: var(--primary-color);
 }
+.toggle {
+  display: flex;
+  align-items: center;
+}
 .toggle svg {
   transition: 1s ease;
 }
@@ -55,4 +61,19 @@ nav {
 }
 .light .toggle svg:active {
   transform: rotate(-720deg);
+}
+@media only screen and (max-width: 760px) {
+  nav {
+    display: none;
+  }
+  .darkName,
+  .lightName {
+    flex: 2;
+  }
+  .toggle {
+    margin: 0 0.5em;
+  }
+  .header {
+    padding-right: 0.8em;
+  }
 }
