--- a/src/porfolio shi/home.css
+++ b/src/porfolio shi/home.css
@@ -76,3 +76,13 @@ main {
   text-decoration: none;
   color: inherit;
 }
+@media only screen and (max-width: 760px) {
+  .homepage {
+    padding-top: 2em;
+    grid-template-columns: 1fr;
+    margin-bottom: 15em;
+  }
+  img {
+    border-radius: 1em;
+  }
+}
