--- a/src/porfolio shi/hamburger.css
+++ b/src/porfolio shi/hamburger.css
@@ -48,12 +48,13 @@
   align-items: center;
   position: absolute;
   background-color: var(--secondary-color);
-  top: 2.3em;
+  top: 2.2em;
   left: -15em;
   right: 0;
   min-width: 20em;
   min-height: 100vh;
   padding: 1em;
+  border-top: 1px solid var(--primary-color);
 }
 .menu-item {
   padding: 1em 2.5em;
