--- a/src/porfolio shi/header.css
+++ b/src/porfolio shi/header.css
@@ -15,6 +15,7 @@ header {
   background-color: var(--secondary-color);
   color: white;
   padding-right: 2em;
+  z-index: 100;
 }
 ul {
   list-style: none;
