--- a/src/porfolio shi/about.css
+++ b/src/porfolio shi/about.css
@@ -21,7 +21,7 @@
   align-items: center;
   font-weight: 500;
 }
-.accordion-header button {
+/* .accordion-header button {
   background-color: var(--third-color);
   width: 1.5em;
   height: 1.5em;
@@ -29,14 +29,18 @@
   border-radius: 1em;
   font-weight: 600;
   color: white;
-}
+} */
+
 .whole-accordion {
   background-color: #001e38;
   color: white;
   padding: 1em;
   margin-bottom: 0.5em;
 }
-
+.accordion-header span {
+  color: var(--third-color);
+  font-size: 1.2em;
+}
 .about {
   width: 70%;
 }
@@ -44,6 +48,7 @@
   width: 80%;
   font-size: 0.8em;
   margin-top: 1em;
+  transition: 1s ease;
 }
 @media only screen and (max-width: 760px) {
   .about {
