--- a/src/porfolio shi/about.css
+++ b/src/porfolio shi/about.css
@@ -62,3 +62,10 @@
 .main-about img {
   height: 20em;
 }
+.about-section .icon {
+  font-size: 1em;
+}
+.info-section .more-info p {
+  display: flex;
+  align-items: center;
+}
