--- a/src/porfolio shi/styles.css
+++ b/src/porfolio shi/styles.css
@@ -3,6 +3,7 @@
   --primary-color: #ffd700;
   --secondary-color: #002647;
   --third-color: #0580ec;
+  --fourth-color: #0a214d;
 }
 button {
   cursor: pointer;
