--- a/src/porfolio shi/skills.css
+++ b/src/porfolio shi/skills.css
@@ -51,3 +51,8 @@
   height: 100%;
   border-radius: inherit;
 }
+@media only screen and (max-width: 760px) {
+  .skills-grid {
+    grid-template-columns: 1fr;
+  }
+}
