--- a/src/porfolio shi/skills.css
+++ b/src/porfolio shi/skills.css
@@ -39,10 +39,9 @@
   background-color: var(--secondary-color);
   border-radius: 0.2em;
 }
-.skill {
+.skill div:nth-child(1) {
+  color: white;
   display: flex;
-  align-items: center;
-  width: 100%;
   justify-content: space-between;
 }
 .percent {
@@ -51,8 +50,19 @@
   height: 100%;
   border-radius: inherit;
 }
+.soft .skills-list div {
+  color: white;
+  display: flex;
+
+  justify-content: space-between;
+}
+
+.soft .skills-list span {
+  color: black;
+}
 @media only screen and (max-width: 760px) {
   .skills-grid {
     grid-template-columns: 1fr;
+    gap: 2em;
   }
 }
