--- a/src/porfolio shi/header.css
+++ b/src/porfolio shi/header.css
@@ -6,16 +6,21 @@
 }
 header {
   position: fixed;
-  top: 0;
+  height: 3em;
+  top: 0.5em;
   display: flex;
-  width: 100%;
+  left: 2em;
+  right: 2em;
   justify-content: space-between;
   padding: 0.8em;
   align-items: center;
-  background-color: var(--secondary-color);
+  background-color: transparent;
   color: white;
   padding-right: 2em;
   z-index: 100;
+  border-radius: 2em;
+  backdrop-filter: blur(20px);
+  box-shadow: 0px 0px 3px #0000004f;
 }
 ul {
   list-style: none;
@@ -74,7 +79,10 @@ nav {
   .toggle {
     margin: 0 0.5em;
   }
-  .header {
+  header {
     padding-right: 0.8em;
+    top: 5px;
+    left: 5px;
+    right: 5px;
   }
 }
