--- a/src/porfolio shi/about.css
+++ b/src/porfolio shi/about.css
@@ -4,6 +4,7 @@
   flex-direction: column;
   align-items: center;
   scroll-margin-top: 5em;
+  margin-bottom: 3rem;
 }
 .section-head {
   display: flex;
