--- a/src/porfolio shi/header.css
+++ b/src/porfolio shi/header.css
@@ -33,8 +33,29 @@ ul li a {
   text-decoration: none;
   transition: 0.6s ease;
 }
-ul li a:hover {
-  background-color: #0580ec89;
+nav ul li {
+  position: relative;
+}
+nav ul li:nth-child(1)::before,
+nav ul li:nth-child(3)::before,
+nav ul li:nth-child(5)::before,
+nav ul li:nth-child(7)::before,
+nav ul li:nth-child(9)::before {
+  content: '';
+  bottom: 0;
+  height: 0.1em;
+  position: absolute;
+  left: 0;
+  right: 0.1em;
+  background-color: var(--primary-color);
+  display: none;
+  animation: underline 0.5s ease-out;
+}
+nav ul li:hover::before {
+  display: block;
+}
+ul li:hover {
+  color: #0580ec89;
 }
 nav {
   width: 50%;
@@ -46,14 +67,15 @@ nav {
   font-weight: 600;
 }
 .darkName {
-  color: var(--primary-color);
+  color: var(--secondary-color);
 }
 .dark {
   color: white;
 }
 .light {
   color: var(--secondary-color);
-  background-color: var(--primary-color);
+  /* background-color: #ffd900e1;
+  backdrop-filter: blur(20px); */
 }
 .toggle {
   display: flex;
