--- a/src/porfolio shi/home.css
+++ b/src/porfolio shi/home.css
@@ -4,12 +4,22 @@
   border-top-right-radius: 1em;
   width: 100%;
 }
+.image {
+  height: 30em;
+}
 .homepage {
   display: grid;
   grid-template-columns: repeat(2, 1fr);
   box-shadow: 0em 0em 2em rgba(0, 0, 0, 0.514);
   border-radius: 1em;
   height: 30em;
+  background: linear-gradient(
+    to right bottom,
+    #0580ec,
+    #0580ec82,
+    #00498980,
+    #004989d4
+  );
 }
 main {
   width: 100%;
@@ -24,6 +34,7 @@ main {
   justify-content: center;
   padding: 1em;
   color: var(--secondary-color);
+  /* background: linear-gradient(to right bottom, #0580ec, #00498980); */
 }
 .greeting {
   font-size: 3em;
