--- a/src/porfolio shi/styles.css
+++ b/src/porfolio shi/styles.css
@@ -10,7 +10,8 @@ button {
 }
 html {
   min-height: 100em;
-  background: linear-gradient(to right bottom, #0580ec, var(--secondary-color));
+  /* background: linear-gradient(to right bottom, #0580ec, var(--secondary-color)); */
+  background: linear-gradient(to right bottom, #9cd1ff, #091223);
 }
 body {
   padding-top: 5em;
@@ -48,4 +49,15 @@ body {
 }
 .portfolio {
   position: relative;
+}
+@keyframes underline {
+  0% {
+    right: 90%;
+  }
+  50% {
+    right: 50%;
+  }
+  100% {
+    right: 0%;
+  }
 }
