--- a/src/porfolio shi/about.css
+++ b/src/porfolio shi/about.css
@@ -1,4 +1,5 @@
 .about-section {
+  background-color: #001e385f;
   background-size: cover;
   margin-top: 5em;
   display: flex;
@@ -111,10 +112,6 @@
   justify-content: space-between;
   padding-left: 1em;
 }
-.info-section .more-info p {
-  display: flex;
-  align-items: center;
-}
 
 .more-info p {
   color: white;
@@ -123,7 +120,7 @@
   display: flex;
   flex-direction: column;
   justify-content: space-between;
-  height: 50%;
+
   color: white;
 }
 .more-info p span {
@@ -145,9 +142,12 @@
   }
 
   .about-image {
-    margin-bottom: 3em;
+    margin-bottom: 4em;
   }
   .about-section {
     justify-content: center;
+  }
+  .info-section {
+    box-shadow: 0px 10px 20px #000000a9;
   }
 }
