--- a/src/porfolio shi/about.css
+++ b/src/porfolio shi/about.css
@@ -16,6 +16,7 @@
   font-size: 2em;
   align-items: center;
   color: white;
+  margin-bottom: 1rem;
 }
 /* .section-head::before {
   content: '';
@@ -148,6 +149,15 @@
     justify-content: center;
   }
   .info-section {
+    padding: 0.5em;
     box-shadow: 0px 0px 20px #00000070;
+  }
+  .main-about {
+    place-items: center;
+  }
+}
+@media (max-width: 600px) {
+  .about-image::before {
+    display: none;
   }
 }
