--- a/src/porfolio shi/projects.css
+++ b/src/porfolio shi/projects.css
@@ -1,6 +1,6 @@
 .projects-section {
   background: #001e385f;
-  padding: 2em;
+  padding: 2em 10em;
 }
 .projects {
   display: grid;
@@ -18,7 +18,7 @@
 }
 .project-card:hover {
   box-shadow: 0px 10px 35px #000000a3;
-  transform: scale(1.03);
+  transform: scale(0.99);
 }
 .project-image {
   position: relative;
@@ -69,7 +69,8 @@
 .project-image img {
   object-fit: cover;
   width: 100%;
-  height: 10em;
+  /* height: 10em; */
+  min-height: 10em;
   border-top-right-radius: 0.5em;
   border-top-left-radius: 0.5em;
 }
