--- a/src/porfolio shi/styles.css
+++ b/src/porfolio shi/styles.css
@@ -65,3 +65,13 @@ body {
 .deployed {
   color: #0580ec;
 }
+@keyframes appear {
+  from {
+    opacity: 0;
+    scale: 0.5;
+  }
+  to {
+    opacity: 1;
+    scale: 1;
+  }
+}
