--- a/src/porfolio shi/footer.css
+++ b/src/porfolio shi/footer.css
@@ -6,7 +6,7 @@
   padding: 1em;
   padding-top: 3em;
   min-height: 18em;
-  height: 20em;
+  height: 18em;
   position: fixed;
   bottom: 0;
   width: 100%;
@@ -17,12 +17,12 @@ footer {
   clip-path: polygon(0% 0, 100% 0%, 100% 100%, 0 100%);
   min-height: 18em;
   z-index: -26;
-  height: 20em;
+  height: 18em;
   /* background: url(../assets/forest.jpeg); */
   background-size: cover;
 }
 .socials {
-  height: 60%;
+  height: 90%;
   grid-column: span 2;
   align-items: center;
   display: flex;
@@ -48,7 +48,7 @@ footer {
   color: #ffffff;
 }
 .sitemap {
-  height: 60%;
+  height: 90%;
   display: flex;
   flex-direction: column;
   justify-content: space-between;
@@ -57,23 +57,43 @@ footer {
 .contact .contact-info {
   margin-bottom: 0em;
   font-size: 1.2em;
+  white-space: normal;
 }
 .contact .contact-info div p {
   color: #ffffff;
+  white-space: normal;
+}
+.footer hr {
+  height: 2px;
+  border: none;
+  background-color: grey;
+  width: 100%;
+  grid-column: span 4;
+}
+.last {
+  grid-column: span 4;
+  justify-self: center;
 }
 @media (max-width: 762px) {
   .footer {
-    grid-template-columns: 1fr;
+    grid-template-columns: 1fr 1fr;
     gap: 2em;
-    height: 40em;
+    height: 48em;
   }
   footer {
-    height: 40em;
+    height: 48em;
   }
   .socials {
-    grid-column: span 1;
+    grid-column: span 2;
   }
   .sitemap p {
     margin-bottom: 0.5em;
+  }
+  .footer hr {
+    grid-column: span 2;
+  }
+  .last {
+    grid-column: span 2;
+    height: fit-content;
   }
 }
