--- a/src/porfolio shi/projects.css
+++ b/src/porfolio shi/projects.css
@@ -14,12 +14,13 @@
   grid-template-columns: 1fr;
   width: 18em;
   height: 18em;
-  transition: 0.5s ease;
+  transition: 0.2s ease;
   border-radius: 0.5em;
   cursor: pointer;
+  box-shadow: 0 5px 10px #bbdeff86;
 }
 .project-card:hover {
-  box-shadow: 0px 10px 15px #000000;
+  box-shadow: none;
   /* transform: scale(0.99); */
 }
 .project-image {
